# sd

./: .gitignore  AGENTS.md  README.md  generate_defect.py  project_boot.py  pyproject.toml  work_stream.py
.context/: filesystem_policy.md  index.md  memory.md
bolt/: README.md
demo/: __init__.py  batch_augment.py  generate_defect.py  project_boot.py  test_generate.py
docs/: README.md  env_regression_registry.md  project_test_registry.md  repo_tree.md  初赛技术路线README.md  初赛详细执行指南README.md
scripts/: batch_infer_missing_fastener.py  connect_server.py  crop_center.py  infer_missing_fastener_controlnet_lora.py  match_context_templates.py  roi_midcontext_from_xml.py
tests/: test_adaptive_roi.py  test_bootstrap_local_workspace.py  test_build_first10_missing_patch_manifest.py  test_build_gimp_xcf_batch.py  test_build_good_bolt_review_manifest.py  test_build_powerpaint_protected_manifest.py  test_build_sdxl_experiment_queue.py  test_demo_boot.py  test_detection_baseline_cli.py  test_distance_ladder.py  test_donor_paste.py  test_export_gimp_xcf_masks.py  test_export_good_bolt_donor_patch.py  test_export_good_bolt_roi_bank.py  test_generate_mask_geometry.py  test_geometry_prior.py  test_good_bolt_sam2_box_prompt_backend.py  test_materialize_good_bolt_sam2_assets.py  test_materialize_submission_scaffold.py  test_missing_donor_patch.py  test_powerpaint_v2_annotations.py  test_prepare_detection_dataset.py  test_prepare_lora_dataset_manifest.py  test_prepare_lora_labelme_roi_crops.py  test_prepare_lora_roi_crops.py  test_prepare_lora_training_scaffold.py  test_project_boot.py  (+12 more)
(+94 files in other folders)
